[MODFIN-371] - Separate credits from expenditures in mod-finance (#252)
* [MODFIN-371] - Separate credits from expenditures in mod-finance

* fixed unit tests related to credits feature

* changed calculation of cashBalance

* fixed unit test

* reformat code

* Changed tests to include credits calculation

* Improvements after code-review

* fixed unit test

* fixed unit test

* Recalculated unavailable amount

* fixed failed test

* changing unit test initial budget details

* removed calculation from builder